test/parser/traits/declref_trait_without_function.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:14: error: expected '::'
  @<S impl A>;
}
